# leetcode

./: CMakeLists.txt  go.mod  readme.md
leetcode-c/: CMakeLists.txt
leetcode-c/advantage-shuffle/: advantage-shuffle-test.c  advantage-shuffle.c
leetcode-c/all-nodes-distance-k-in-binary-tree/: all-nodes-distance-k-in-binary-tree-test.c  all-nodes-distance-k-in-binary-tree.c
leetcode-c/backspace-string-compare/: backspace-string-compare-test.c  backspace-string-compare.c
leetcode-c/binary-tree-pruning/: binary-tree-pruning-test.c  binary-tree-pruning.c
leetcode-c/boats-to-save-people/: boats-to-save-people-test.c  boats-to-save-people.c
leetcode-c/broken-calculator/: broken-calculator-test.c  broken-calculator.c
leetcode-c/built-in/: CMakeLists.txt  ListNode.c  ListNode.h  TreeNode.c  TreeNode.h  Vector.c  Vector.h  built-in-test.c  util.c  util.h
leetcode-c/chalkboard-xor-game/: chalkboard-xor-game-test.c  chalkboard-xor-game.c
leetcode-c/check-if-there-is-a-valid-path-in-a-grid/: check-if-there-is-a-valid-path-in-a-grid-test.c  check-if-there-is-a-valid-path-in-a-grid.c
leetcode-c/closest-dessert-cost/: closest-dessert-cost-benchmark.c  closest-dessert-cost-test.c  closest-dessert-cost.c
leetcode-c/clumsy-factorial/: clumsy-factorial-test.c  clumsy-factorial.c
leetcode-c/coloring-a-border/: coloring-a-border-test.c  coloring-a-border.c
leetcode-c/construct-the-lexicographically-largest-valid-sequence/: construct-the-lexicographically-largest-valid-sequence-test.c  construct-the-lexicographically-largest-valid-sequence.c
leetcode-c/contains-duplicate/: contains-duplicate-test.c  contains-duplicate.c
leetcode-c/count-primes/: count-primes-test.c  count-primes.c
leetcode-c/count-substrings-starting-and-ending-with-given-character/: count-substrings-starting-and-ending-with-given-character-test.c  count-substrings-starting-and-ending-with-given-character.c
leetcode-c/create-target-array-in-the-given-order/: create-target-array-in-the-given-order-test.c  create-target-array-in-the-given-order.c
leetcode-c/daily-temperatures/: daily-temperatures-test.c  daily-temperatures.c
leetcode-c/data-stream-as-disjoint-intervals/: data-stream-as-disjoint-intervals-test.c  data-stream-as-disjoint-intervals.c
leetcode-c/delete-node-in-a-linked-list/: delete-node-in-a-linked-list-test.c  delete-node-in-a-linked-list.c
leetcode-c/design-add-and-search-words-data-structure/: design-add-and-search-words-data-structure-test.c  design-add-and-search-words-data-structure.c
leetcode-c/distant-barcodes/: distant-barcodes-test.c  distant-barcodes.c
leetcode-c/dungeon-game/: dungeon-game-test.c  dungeon-game.c
leetcode-c/exam-room/: exam-room-test.c  exam-room.c
leetcode-c/expression-add-operators/: CMakeLists.txt  expression-add-operators-test.c  expression-add-operators.c
leetcode-c/filter-restaurants-by-vegan-friendly-price-and-distance/: filter-restaurants-by-vegan-friendly-price-and-distance-test.c  filter-restaurants-by-vegan-friendly-price-and-distance.c
leetcode-c/find-bottom-left-tree-value/: find-bottom-left-tree-value-test.c  find-bottom-left-tree-value.c
leetcode-c/find-elements-in-a-contaminated-binary-tree/: find-elements-in-a-contaminated-binary-tree-test.c  find-elements-in-a-contaminated-binary-tree.c
leetcode-c/find-minimum-in-rotated-sorted-array/: find-minimum-in-rotated-sorted-array-test.c  find-minimum-in-rotated-sorted-array.c
leetcode-c/find-minimum-in-rotated-sorted-array-ii/: find-minimum-in-rotated-sorted-array-ii-test.c  find-minimum-in-rotated-sorted-array-ii.c
leetcode-c/find-right-interval/: find-right-interval-test.c  find-right-interval.c
leetcode-c/game-of-life/: game-of-life-test.c  game-of-life.c
leetcode-c/happy-number/: happy-number-test.c  happy-number.c
leetcode-c/implement-trie-prefix-tree/: implement-trie-prefix-tree-test.c  implement-trie-prefix-tree.c
leetcode-c/insert-delete-getrandom-o1/: insert-delete-getrandom-o1-test.c  insert-delete-getrandom-o1.c
leetcode-c/integer-replacement/: integer-replacement-test.c  integer-replacement.c
leetcode-c/largest-number/: largest-number-test.c  largest-number.c
leetcode-c/letter-case-permutation/: letter-case-permutation-test.c  letter-case-permutation.c
leetcode-c/linked-list-in-binary-tree/: linked-list-in-binary-tree-test.c  linked-list-in-binary-tree.c
leetcode-c/longest-nice-substring/: longest-nice-substring-test.c  longest-nice-substring.c
leetcode-c/lowest-common-ancestor-of-deepest-leaves/: lowest-common-ancestor-of-deepest-leaves-test.c  lowest-common-ancestor-of-deepest-leaves.c
leetcode-c/matchsticks-to-square/: matchsticks-to-square-test.c  matchsticks-to-square.c
leetcode-c/max-increase-to-keep-city-skyline/: max-increase-to-keep-city-skyline-test.c  max-increase-to-keep-city-skyline.c
leetcode-c/maximum-average-subarray-i/: maximum-average-subarray-i-test.c  maximum-average-subarray-i.c
leetcode-c/maximum-ice-cream-bars/: maximum-ice-cream-bars-test.c  maximum-ice-cream-bars.c
leetcode-c/minimum-size-subarray-sum/: minimum-size-subarray-sum-test.c  minimum-size-subarray-sum.c
leetcode-c/missing-number/: missing-number-test.c  missing-number.c
leetcode-c/most-stones-removed-with-same-row-or-column/: most-stones-removed-with-same-row-or-column-test.c  most-stones-removed-with-same-row-or-column.c
leetcode-c/multi-search-lcci/: multi-search-lcci-test.c  multi-search-lcci.c
leetcode-c/nim-game/: nim-game-test.c  nim-game.c
leetcode-c/non-overlapping-intervals/: non-overlapping-intervals-test.c  non-overlapping-intervals.c
leetcode-c/number-of-boomerangs/: number-of-boomerangs-test.c  number-of-boomerangs.c
leetcode-c/number-of-digit-one/: CMakeLists.txt  number-of-digit-one-test.c  number-of-digit-one.c
leetcode-c/number-of-segments-in-a-string/: number-of-segments-in-a-string-test.c  number-of-segments-in-a-string.c
leetcode-c/number-of-valid-words-for-each-puzzle/: number-of-valid-words-for-each-puzzle-test.c  number-of-valid-words-for-each-puzzle.c
leetcode-cpp/: .gitignore  CMakeLists.txt  main.cpp
(+882 files in other folders)
